--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <version>0-SNAPSHOT</version>
 
 	<properties>
+        <spring-social-bootstrap.version>${project.parent.version}</spring-social-bootstrap.version>
 		<spring-social-mockbin.version>4</spring-social-mockbin.version>
 	</properties>
 
